# lanty

./: .gitignore  Cargo.toml  README.md
data/: lanty_chat_eval.jsonl  lanty_system_prompt.txt
data/lanty_voice/: dialogues_goofy.txt  dialogues_lockedin.txt  dialogues_short.txt  personality_bible.md
data/lore/: adventuring_gear.md  embers.md  equipment.md  lithilian.md  lore_v2.md  potions.md  uniques.md  writing_style_guide.md
data/lore/creatures/: archmage_squirrel.json  bandit.json  goblin.json  skeleton.json
data/lore/species/: beastkin_wolf.json  cinderborn.json  human.json  (+5 more)
data/training/: batch_0000_glitch.txt  batch_0000_goofy.txt  batch_0001_game_events.txt  batch_0001_multi_turn.txt  batch_0002_goofy.txt  batch_0002_lockedin.txt  batch_0003_goofy.txt  batch_0003_lockedin.txt  batch_0004_game_events.txt  batch_0004_goofy.txt  batch_0005_glitch.txt  batch_0005_inn_events.txt  batch_0006_lockedin.txt  batch_0006_multi_turn.txt  batch_0007_emotional.txt  batch_0007_goofy.txt  batch_0008_glitch.txt  batch_0008_multi_turn.txt  batch_0009_game_events.txt  batch_0009_inn_events.txt  batch_0010_goofy.txt  batch_0011_lockedin.txt  batch_0011_multi_turn.txt  batch_0012_inn_events.txt  batch_0013_inn_events.txt  batch_0014_glitch.txt  batch_0014_goofy.txt  batch_0015_lockedin.txt  batch_0016_lockedin.txt  batch_0017_goofy.txt  batch_0018_game_events.txt  batch_0018_goofy.txt  batch_0019_goofy.txt  batch_0019_lockedin.txt  batch_0020_goofy.txt  batch_0021_game_events.txt  batch_0021_goofy.txt  batch_0022_inn_events.txt  batch_0022_lockedin.txt  batch_0023_emotional.txt  (+353 more)
docs/: v0.5.0-plan.md
inference/: chat.py
lambda/: README.md  deploy.sh  deploy_python.sh
scripts/: eval_glitch.py  eval_voice.py  generate_training_data.py  merge_and_export.py  prepare_chat_dataset.py  train_lanty.py
scripts/lanty_gen/: __init__.py  api.py  probes.py  prompts.py  topics.py
src/: app.rs  brain.rs  bubble.rs  chat_input.rs  generate.rs  gpu.rs  lib.rs  main.rs  personality.rs  renderer.rs  state.rs  tensor.rs  tokenizer.rs  training.rs  transformer.rs  tui.rs  window.rs
