[package]
name = "lanty"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
rand = "0.8"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"