[package]
name = "lanty"
version = "0.1.0"
edition = "2024"
description = "A from-scratch transformer language model"

[[bin]]
name = "lanty"
path = "src/main.rs"

[[bin]]
name = "lanty-train-tokenizer"
path = "src/bin/train_tokenizer.rs"

[[bin]]
name = "lanty-train"
path = "src/bin/train_model.rs"

[[bin]]
name = "lanty-prepare-data"
path = "src/bin/prepare_data.rs"

[[bin]]
name = "lanty-test-generate"
path = "src/bin/test_generate.rs"

[features]
default = ["cuda"]
cuda = ["cudarc"]

[dependencies]
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1.10"
indicatif = "0.17"
regex = "1"
ureq = "2"
flate2 = "1"
cudarc = { version = "0.19", features = ["cublas", "cuda-version-from-build-system"], optional = true }
ratatui = "0.29"
crossterm = "0.28"
